SERVER-131418 Report oplog collection's size and count only when size-based oplog truncation is enabled (#58730)

GitOrigin-RevId: 4817484ee5a537040f874004ae6ed80d4d6a7e1d