src/mongo/db/replicated_fast_count/replicated_fast_count_enabled.cpp
@@ -26,7 +26,7 @@ bool isReplicatedFastCountEnabled(OperationContext* opCtx) {
 }
 
 bool isReplicatedFastCountEligible(const NamespaceString& nss) {
-    if (nss.isOplog()) {
+    if (nss.isOplog() && gFeatureFlagSizeBasedOplogTruncationForDisagg.isEnabled()) {
         return true;
     }
     if (nss.isLocalDB() || nss.isImplicitlyReplicated() || nss.isServerConfigurationCollection() ||
